# simplebank-haskell

./: README.md  doc-index.html  index-frames.html  simplebank.cabal
docs/: Web-Simplebank.html  index.html  mini_Web-Simplebank.html  simplebank.haddock
scripts/: deploy-haddock-manually.sh
src/Web/: Simplebank.hs
