name:                simplebank
version:             1.0.0
synopsis:            A very small interface using Wreq, to simple.com
homepage:            http://codeblock.github.io/simplebank
license:             BSD2
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
copyright:           (c) 2014 Ricky Elrod
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Web.Simplebank
  build-depends:       aeson >= 0.7
                     , base >= 4 && < 5
                     , wreq >= 0.1.0.1
                     , lens >= 4
  hs-source-dirs:      src
  default-language:    Haskell2010
